--- a/src/main/resources/com/example/tp_calculette/calcul-view.fxml
+++ b/src/main/resources/com/example/tp_calculette/calcul-view.fxml
@@ -1,16 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.VBox?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.HBox?>
+
 <VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
       fx:controller="com.example.tp_calculette.CalculController">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-    </padding>
+    <HBox spacing="5" alignment="CENTER">
+        <Label text="a : "/>
+        <TextField fx:id="value1" prefWidth="50"/>
+    </HBox>
 
-    <Label fx:id="welcomeText"/>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
+    <HBox spacing="5" alignment="CENTER">
+        <Label text="b : "/>
+        <TextField fx:id="value2" prefWidth="50"/>
+    </HBox>
+
+    <HBox spacing="5" alignment="CENTER">
+        <Label text="c : "/>
+        <TextField fx:id="value3" prefWidth="50"/>
+    </HBox>
+
+
+    <Button text="Calculer" onAction="#onClicked"/>
+
+    <Label fx:id="response" text="Résultat : " style="-fx-font-weight:bold;"/>
 </VBox>
