--- a/src/main/resources/com/example/tp_calculette/calcul-view.fxml
+++ b/src/main/resources/com/example/tp_calculette/calcul-view.fxml
@@ -1,31 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.VBox?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.HBox?>
-
+<?import javafx.scene.control.TextField?>
 <VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.example.tp_calculette.CalculController">
+      fx:controller="com.example.tp_calculette.presentation.controller.CalculController">
+
+    <HBox spacing="5" alignment="CENTER">
+        <Label text="Inserez les valeurs a,b,c pour resoudre"/>
+    </HBox>
+
     <HBox spacing="5" alignment="CENTER">
         <Label text="a : "/>
-        <TextField fx:id="value1" prefWidth="50"/>
+        <TextField fx:id="valueAField" prefWidth="50"/>
     </HBox>
 
     <HBox spacing="5" alignment="CENTER">
         <Label text="b : "/>
-        <TextField fx:id="value2" prefWidth="50"/>
+        <TextField fx:id="valueBField" prefWidth="50"/>
     </HBox>
 
     <HBox spacing="5" alignment="CENTER">
         <Label text="c : "/>
-        <TextField fx:id="value3" prefWidth="50"/>
+        <TextField fx:id="valueCField" prefWidth="50"/>
     </HBox>
 
+    <Button text="Calculer" onAction="#onCalculate"/>
 
-    <Button text="Calculer" onAction="#onClicked"/>
-
-    <Label fx:id="response" text="Résultat : " style="-fx-font-weight:bold;"/>
+    <Label fx:id="resultLabel" style="-fx-font-weight:bold;"/>
 </VBox>
